- Fix MVVM Login + update redis v2 + data binding

--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="auth"
-            type="vn.hcmute.appfoodorder.viewmodel.AuthViewModel" />
+            type="vn.hcmute.appfoodorder.viewmodel.LoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
