--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -1,167 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".ui.activity.user.LoginActivity">
 
-    <ScrollView
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="register"
+            type="vn.hcmute.appfoodorder.viewmodel.RegisterViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="48dp"
-                app:srcCompat="@drawable/logo" />
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_marginTop="8dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="45sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/blue_gray"
-                    android:text="FOOD APP" />
-
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/edtRegisterEmail"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:inputType="text"
-                android:background="@drawable/editext_background"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:padding="8dp"
-                android:textColorHint="@color/blue_gray"
-                android:hint="Email" />
-            <EditText
-                android:id="@+id/edtRegisterPassword"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:inputType="text"
-                android:background="@drawable/editext_background"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:padding="8dp"
-                android:textColorHint="@color/blue_gray"
-                android:hint="Password" />
-            <EditText
-                android:id="@+id/edtRepeatPass"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:inputType="text"
-                android:background="@drawable/editext_background"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:padding="8dp"
-                android:textColorHint="@color/blue_gray"
-                android:hint="Confirm Password" />
-
-            <EditText
-                android:id="@+id/edtRegisterFullName"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:inputType="text"
-                android:background="@drawable/editext_background"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:padding="8dp"
-                android:textColorHint="@color/blue_gray"
-                android:hint="Full Name" />
-
-            <EditText
-                android:id="@+id/edtRegisterPhone"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:inputType="text"
-                android:background="@drawable/editext_background"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:padding="8dp"
-                android:textColorHint="@color/blue_gray"
-                android:hint="Phone" />
-
-            <EditText
-                android:id="@+id/edtRegisterAddress"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:inputType="text"
-                android:background="@drawable/editext_background"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:padding="8dp"
-                android:textColorHint="@color/blue_gray"
-                android:hint="Address" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/red_button_background"
-                android:layout_margin="32dp"
-                android:textColor="@color/white"
-                style="@android:style/Widget.Button"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:text="Register" />
+                android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="48dp"
+                    app:srcCompat="@drawable/logo" />
 
+                <LinearLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="45sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/blue_gray"
+                        android:text="FOOD APP" />
+
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/edtRegisterEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:background="@drawable/editext_background"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:padding="8dp"
+                    android:textColorHint="@color/blue_gray"
+                    android:hint="Email"
+                    android:text="@={register.email}"/>
                 <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/blue_gray"
-                    android:text="You have an account? " />
-
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:text="@{register.emailError}"
+                    android:visibility="@{register.emailError.isEmpty() ? View.GONE : View.VISIBLE}"/>
+                <EditText
+                    android:id="@+id/edtRegisterPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:background="@drawable/editext_background"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:padding="8dp"
+                    android:textColorHint="@color/blue_gray"
+                    android:hint="Password"
+                    android:text="@={register.password}"/>
                 <TextView
-                    android:id="@+id/btnReLogin"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/red"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:text="@{register.passwordError}"
+                    android:visibility="@{register.passwordError.isEmpty() ? View.GONE : View.VISIBLE}"/>
+                <EditText
+                    android:id="@+id/edtRepeatPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:background="@drawable/editext_background"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:padding="8dp"
+                    android:textColorHint="@color/blue_gray"
+                    android:hint="Confirm Password"
+                    android:text="@={register.confirmPass}"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:text="@{register.confirmPassError}"
+                    android:visibility="@{register.confirmPassError.isEmpty() ? View.GONE : View.VISIBLE}"/>
+
+                <EditText
+                    android:id="@+id/edtRegisterFullName"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:background="@drawable/editext_background"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:padding="8dp"
+                    android:textColorHint="@color/blue_gray"
+                    android:hint="Full Name"
+                    android:text="@={register.fullName}"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:text="@{register.fullNameError}"
+                    android:visibility="@{register.fullNameError.isEmpty() ? View.GONE : View.VISIBLE}"/>
+
+                <EditText
+                    android:id="@+id/edtRegisterPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:background="@drawable/editext_background"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:padding="8dp"
+                    android:textColorHint="@color/blue_gray"
+                    android:hint="Phone"
+                    android:text="@={register.phone}"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:text="@{register.phoneError}"
+                    android:visibility="@{register.phoneError.isEmpty() ? View.GONE : View.VISIBLE}"/>
+
+
+                <EditText
+                    android:id="@+id/edtRegisterAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:background="@drawable/editext_background"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:padding="8dp"
+                    android:textColorHint="@color/blue_gray"
+                    android:hint="Address"
+                    android:text="@={register.address}"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="32dp"
+                    android:text="@{register.addressError}"
+                    android:visibility="@{register.addressError.isEmpty() ? View.GONE : View.VISIBLE}"/>
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnRegister"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/red_button_background"
+                    android:layout_margin="32dp"
+                    android:textColor="@color/white"
+                    style="@android:style/Widget.Button"
                     android:textSize="16sp"
-                    android:text="Log In" />
+                    android:textStyle="bold"
+                    android:text="Register"
+                    android:onClick="@{()->register.onRegisterButtonClick()}"/>
+
+                <LinearLayout
+                    android:layout_marginTop="12dp"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@color/blue_gray"
+                        android:text="You have an account? " />
+
+                    <TextView
+                        android:id="@+id/btnReLogin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/red"
+                        android:textSize="16sp"
+                        android:text="Log In" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
