--- a/android/app/src/main/res/layout/activity_verify_otp.xml
+++ b/android/app/src/main/res/layout/activity_verify_otp.xml
@@ -72,6 +72,7 @@
                     android:inputType="number"
                     app:cursorColor="@color/black"
                     app:hideLineWhenFilled="false"
+                    android:importantForAccessibility="no"
                     app:itemCount="6"
                     app:itemHeight="50dp"
                     app:itemRadius="5dp"
@@ -101,7 +102,8 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/red"
                         android:textSize="16sp"
-                        android:text="RESEND OTP" />
+                        android:text="RESEND OTP"
+                        android:onClick="@{() -> verify.resendOtp()}"/>
                 </LinearLayout>
 
 
