--- a/android/app/src/main/res/layout/activity_list_food.xml
+++ b/android/app/src/main/res/layout/activity_list_food.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.ListFoodActivity">
+    tools:context=".ui.activity.FoodListActivity">
 
     <ScrollView
         android:id="@+id/scrollView2"
