--- a/android/app/src/main/res/layout/item_cart.xml
+++ b/android/app/src/main/res/layout/item_cart.xml
@@ -16,17 +16,16 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imgItemCart"
             android:layout_width="123dp"
             android:layout_height="96dp"
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/tvFoodNameItemCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -34,22 +33,22 @@
             android:textStyle="bold"
             android:textColor="@color/blue_gray"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/imageView5" />
+            app:layout_constraintStart_toEndOf="@+id/imgItemCart"
+            app:layout_constraintTop_toTopOf="@+id/imgItemCart" />
 
         <TextView
-            android:id="@+id/textView19"
+            android:id="@+id/tvUnitPriceFoodItemCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="price"
             android:textColor="@color/blue_gray"
             android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/textView17"
-            app:layout_constraintTop_toBottomOf="@+id/textView17" />
+            app:layout_constraintStart_toStartOf="@+id/tvFoodNameItemCart"
+            app:layout_constraintTop_toBottomOf="@+id/tvFoodNameItemCart" />
 
         <TextView
-            android:id="@+id/textView20"
+            android:id="@+id/tvPriceItemCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -57,17 +56,17 @@
             android:textSize="18sp"
             android:textColor="@color/red"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+            app:layout_constraintBottom_toBottomOf="@+id/imgItemCart"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-            app:layout_constraintStart_toStartOf="@+id/textView19">
+            app:layout_constraintBottom_toBottomOf="@+id/imgItemCart"
+            app:layout_constraintStart_toStartOf="@+id/tvUnitPriceFoodItemCart">
 
             <TextView
-                android:id="@+id/textView21"
+                android:id="@+id/tvMinusItemCart"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:text="-"
@@ -80,21 +79,21 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView22"
+                android:id="@+id/tvQTYItemCart"
                 android:layout_width="24dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0"
+                android:text="1"
                 android:textColor="@color/blue_gray"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textView23"
-                app:layout_constraintStart_toEndOf="@+id/textView21"
+                app:layout_constraintEnd_toStartOf="@+id/tvPlusItemCart"
+                app:layout_constraintStart_toEndOf="@+id/tvMinusItemCart"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView23"
+                android:id="@+id/tvPlusItemCart"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:text="+"
