--- a/android/app/src/main/res/layout/item_food.xml
+++ b/android/app/src/main/res/layout/item_food.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imgFood"
+            android:id="@+id/imgFoodSearch"
             android:layout_width="0dp"
             android:layout_height="111dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgFood">
+            app:layout_constraintTop_toBottomOf="@+id/imgFoodSearch">
 
             <TextView
                 android:id="@+id/tvFoodName"
