--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:title="Home"
         android:icon="@drawable/home"/>
     <item
+        android:id="@+id/itemSearch"
+        android:icon="@drawable/search_icon"
+        android:title="Search" />
+    <item
         android:id="@+id/itemCart"
         android:title="Cart"
         android:icon="@drawable/cart"/>
