--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="red">#F75564</color>
     <color name="blue_gray">#2E4058</color>
     <color name="gray">#BDBDBD</color>
+    <color name="card_background">#FAFAFA</color>
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#666666</color>
+    <color name="icon_tint">#757575</color>
+    <color name="logout_tint">#E57373</color>
 </resources>
